@@ -1,3 +1,4 @@
+* Display revision on dialog
 * Execute report asynchronously
 * Add support for Python 3.9
 * Support empty value for timedelta converter
